Frontend: Fix more event popup color in dark mode

--- a/calendar-frontend/src/styles.scss
+++ b/calendar-frontend/src/styles.scss
@@ -177,6 +177,7 @@ $calendar-frontend-theme-dark: mat.m2-define-dark-theme((color: (primary: $calen
 
     & {
       --fc-list-event-hover-bg-color: #222222a0;
+      --fc-page-bg-color: #222222;
     }
   }
 
